# paint-shop-optimization

./: README.md
Annealing/: .gitignore  creation.py  evaluation.py  pyproject.toml  solving.py  test_cases.csv
Annealing/documentation/latex_tikZ/: tikZ.tex  tikZ_explanation.docx
Annealing/documentation/paper/: config.tex  contents.tex  index.tex
Annealing/documentation/summary/: index.tex  references.bib
Annealing/mcmcpsp/: problem.py  solution.py
Annealing/mcmcpsp/creation/: __init__.py  equal_color_problem_instance_creation.py  integer_problem_instance_creation.py  one_color_problem_instance_creation.py  problem_instance_creation.py
Annealing/mcmcpsp/directory/: __init__.py  directory.py  problem_json.py  solution_json.py
Annealing/mcmcpsp/evaluation/: __init__.py  best_algorithm.py  boxplot.py  color_changes_evaluation.py  evaluation.py  lineplot.py  mean_time_evaluation.py  plotting_evaluation.py  scatterplot.py
Annealing/mcmcpsp/names/: __init__.py  integer_name.py  name.py
Annealing/mcmcpsp/qubo/: __init__.py  adaptive_weights_qubo.py  qubo_creator.py  simple_qubo.py
Annealing/mcmcpsp/samplers/: __init__.py  dimod_solver.py  sampler.py  uqo_sampler.py
Annealing/mcmcpsp/solvers/: __init__.py  color_change_tracking_solver.py  greedy_solver.py  invalid_color_tracking_solver.py  invalid_num_colors.py  quantum_annealing_solver.py  random_solver.py  runtime_tracking_solver.py  solver.py  (+1 more)
Annealing/planning/: components.puml  directory.puml  problem.puml  project_planning.html  time.puml
Annealing/tests/: test_directory.py  test_integration.py
(+7 files in other folders)
